<resources>
    <string name="app_name">SocialMediaIsaac</string>
    <string name="facebook_app_id">
        1055505671196212
    </string>
    <string name="facebook_scope">
        public_profile, email, user_friends, user_location, user_birthday
    </string>
    <string name="twitter_consumer_key">
        nLNZiL1NutUldyWhgviISHdRd
    </string>
    <string name="twitter_consumer_secret">
        wbr1ufHxHTAo6HLWpxoC4pswBvRzckjBvBv8RdAOqjqF9Dsg45
    </string>
    <string name="linkedin_client_id">
        77am1ego5g5a1h
    </string>
    <string name="linkedin_client_secret">
        3WZg25vVNPyB0WBi
    </string>
    <string name="linkedin_scope">
        r_basicprofile+r_emailaddress+rw_company_admin+w_share
    </string>
    <string name="googleplus_client_id">
        395905322937-po10rhdtpa9k1jla1elafbmnn04eog4t.apps.googleusercontent.com
    </string>
    <string name="instagram_client_id">
        0540ff8f27e5400b8744b396e46b447f
    </string>
    <string name="instagram_client_secret">
        997a6c83a0a74c1cab8550806f88d167
    </string>
    <string name="instagram_scope">
        basic+public_profile+follower_list
    </string>
    <string name="instagram_redirect_uri">
        oauth://ASNE
    </string>
    <string name="callback_url">
        http://www.github.com/isaacurbina
    </string>
    <string name="tv_facebook_hint">FB Name</string>
    <string name="tv_twitter_hint">TW Name</string>
    <string name="tv_googleplus_hint">G+ Name</string>
    <string name="tv_linkedin_hint">IN Name</string>
    <string name="tv_instagram_hint">IG Name</string>

</resources>
