<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context="com.mac.isaac.socialmediaisaac.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/fb_profile"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:scaleType="centerCrop"
            android:id="@+id/iv_facebook"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/tv_facebook"
            android:hint="@string/tv_facebook_hint"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Facebook Login"
        android:id="@+id/btn_facebook"
        android:background="@color/facebook"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/tw_profile"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:scaleType="centerCrop"
            android:id="@+id/iv_twitter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/tv_twitter"
            android:hint="@string/tv_twitter_hint"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Twitter Login"
        android:id="@+id/btn_twitter"
        android:background="@color/twitter"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/gp_profile"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:scaleType="centerCrop"
            android:id="@+id/iv_googleplus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/tv_googleplus"
            android:hint="@string/tv_googleplus_hint"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Google+ Login"
        android:id="@+id/btn_googleplus"
        android:background="@color/googleplus"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/in_profile"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:scaleType="centerCrop"
            android:id="@+id/iv_linkedin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/tv_linkedin"
            android:hint="@string/tv_linkedin_hint"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Linkedin Login"
        android:id="@+id/btn_linkedin"
        android:background="@color/linkedin"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/ig_profile"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:scaleType="centerCrop"
            android:id="@+id/iv_instagram"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/tv_instagram"
            android:hint="@string/tv_instagram_hint"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Instagram Login"
        android:id="@+id/btn_instagram"
        android:background="@color/instagram"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
